--- a/resume.html
+++ b/resume.html
@@ -538,7 +538,7 @@ h2.section-title {
 
 					<div id="contact">
 						<div class="website">
-							<a href="http://dannstockton.com">http://dannstockton.com</a>
+							<a href="https://dannstockton.com">https://dannstockton.com</a>
 						</div>
 						<div class="email">
 							<span class="fa fa-envelope"></span>
@@ -556,7 +556,21 @@ h2.section-title {
 				<section class="section main-summary">
 					<h2 class='section-title'>About</h2>
 					<section>
-						<p>6 years of experience building full-stack, real-world, product focused, web and mobile applications and tools to help increase revenue and decrease expenses. Team player that works best in collaborative environments. Excited about solving hard problems that have real world uses. Future oriented. Big-picture person with a focus on important details (like customer experience/service). Able to bridge the gap to communicate technical ideas into layman’s terms. Passionate about the web and mobile.</p>
+						<ul class="highlights">
+							<li>• 6 years of experience building full-stack, real-world, product focused, web
+								and mobile applications and tools to help increase revenue and decrease
+								expenses.
+							</li>
+							<li>• Team player that works best in collaborative environments.</li>
+							<li>• Excited about solving hard problems that have real world uses.</li>
+							<li>• Future oriented.</li>
+							<li>• Big-picture person with a focus on important details (like customer
+								experience/service).
+							</li>
+							<li>• Able to bridge the gap to communicate technical ideas into layman’s terms.
+							</li>
+							<li>• Passionate about the web and mobile.</li>
+						</ul>
 					</section>
 				</section>
 
@@ -580,24 +594,47 @@ h2.section-title {
 						</header>
 						<div class="item">
 						<div class="position">
-							Sr. Software Engineer
+							Sr. Software Engineer (Team/Technical Lead)
 						</div>
 						<div class="website">
-							<a href="http://ballottrax.com">http://ballottrax.com</a>
+							<a href="https://ballottrax.com">https://ballottrax.com</a>
 						</div>
 						<div class="summary">
-							<p>Mail-in ballot tracking</p>
+							<p>Mail-in ballot tracking, developer workflow automation.</p>
 						</div>
-						<ul class="highlights">
-							<li>Started out as a &#x27;Software Developer&#x27;, received promotion after six months to &#x27;Software Engineer&#x27;. Received another promotion to &#x27;Senior Software Engineer&#x27;.</li>
-							<li><div class="website"><a href="https://itunes.apple.com/us/app/ballottrax/id1214500178?mt=8">Led the project to build a native iOS app (Swift 3, 4, a little bit of React Native)</a></div></li>
-							<li>Reduced complexity of UI by implementing a FSM</li>
-							<li>Mentored junior developers on best practices, helping them write valuable tests, simplify logic, and decrease conditionals</li>
-							<li>Led the project to automate tedious developer workflows, implement various business processes, and connect various services together using Slack as a CLI. (Like an internal IFTTT)</li>
-							<li>Developed custom 30+ Slack slash commands: /auto_merge, /whynotmerge, /rebase, /mailgun, /twilio, /chipotle, /jenkins, /jira, /scrum</li>
-							<li><div class="website"><a href="http://i.imgur.com/kamcLt2.png">Rebase button workflow example</a></div></li>
-							<li><div class="website"><a href="https://i.imgur.com/OUsUgbv.png">Why Not Merge example</a></div></li>
-						</ul>
+							<ul class="highlights">
+								<li>• Started out as a &#x27;Software Developer&#x27;, received promotion after
+									six months to &#x27;Software Engineer&#x27;. Received another promotion to
+									&#x27;Senior Software Engineer&#x27;.
+								</li>
+								<li>• Led the project to build a native iOS app
+									<div class="website"><a
+											href="https://itunes.apple.com/us/app/ballottrax/id1214500178?mt=8">https://itunes.apple.com/us/app/ballottrax/id1214500178?mt=8
+										(Swift 3, 4, a little bit of React Native)</a></div>
+								</li>
+								<li>• Reduced complexity of UI by implementing a FSM</li>
+								<li>• Mentored junior developers on best practices, helping them write valuable
+									tests, simplify logic, and decrease conditionals
+								</li>
+								<li>• Led the project to automate tedious developer workflows, implement various
+									business processes, and connect various services together using Slack as a
+									CLI. (Like an internal IFTTT)
+								</li>
+								<li>• Developed custom 30+ Slack slash commands: /auto_merge, /whynotmerge,
+									/rebase, /mailgun, /twilio, /chipotle, /jenkins, /jira, /scrum
+								</li>
+								<li>
+									<div class="website"><a href="http://i.imgur.com/kamcLt2.png">Rebase button
+										workflow example: http://i.imgur.com/kamcLt2.png</a></div>
+								</li>
+								<li>
+									<div class="website"><a href="https://i.imgur.com/OUsUgbv.png">Why Not Merge
+										example</a></div>
+								</li>
+								<li>• Built in Zend Framework 2-3, Apigility, Zend Expressive 1-3 using PHP 7+,
+									Postgres, React, RabbitMQ, Vagrant, Apache, Centos
+								</li>
+							</ul>
 					</div>
 						<header>
 							<h3 class="name">
@@ -623,14 +660,14 @@ h2.section-title {
 							<p>Turnkey apps/content management for churches &amp; non-profits</p>
 						</div>
 						<ul class="highlights">
-							<li>Led the effort to migrate payment processing to Stripe, implemented and automated a customer sign-up/account creation/follow-up process using webhooks, along with analytics, reporting, and data processing for the finance team</li>
-							<li>Automated front-end process improvements by creating gulp.js build scripts (semantic sprites, LESS/CSS/JS minification, image optimization, live reload)</li>
-							<li>Parallelized push notification work using async workers/DB queues</li>
-							<li>Built API to enable podcasting</li>
-							<li>Built a custom RSS/Atom parser for a &quot;reader&quot; project</li>
-							<li>Helped build &quot;web player&quot; product from the ground up, implemented &quot;auto-resume&quot; feature</li>
-							<li>Overhauled legacy iCal parser, implemented sabre-vobject library</li>
-							<li>Used imagick library to automate image processing/manipulation (primary color, image montage, promo widget)</li>
+							<li>• Led the effort to migrate payment processing to Stripe, implemented and automated a customer sign-up/account creation/follow-up process using webhooks, along with analytics, reporting, and data processing for the finance team</li>
+							<li>• Automated front-end process improvements by creating gulp.js build scripts (semantic sprites, LESS/CSS/JS minification, image optimization, live reload)</li>
+							<li>• Parallelized push notification work using async workers/DB queues</li>
+							<li>• Built API to enable podcasting</li>
+							<li>• Built a custom RSS/Atom parser for a &quot;reader&quot; project</li>
+							<li>• Helped build &quot;web player&quot; product from the ground up, implemented &quot;auto-resume&quot; feature</li>
+							<li>• Overhauled legacy iCal parser, implemented sabre-vobject library</li>
+							<li>• Used imagick library to automate image processing/manipulation (primary color, image montage, promo widget)</li>
 						</ul>
 					</div>
 						<header>
@@ -654,8 +691,8 @@ h2.section-title {
 							<p>Digital Order Fulfillment for artists after their kickstarter project ends</p>
 						</div>
 						<ul class="highlights">
-							<li>Built it to offer digital fulfillment for crowd-funded projects, automating the pain of sending out lots of digital assets to lots of people reliably with a full set of features</li>
-							<li>Built in Zend Framework 1 using PHP5-FPM 5.5, MySQL, HTML5, JS, AJAX, ZMQ, Vagrant, Nginx, Ubuntu</li>
+							<li>• Built it to offer digital fulfillment for crowd-funded projects, automating the pain of sending out lots of digital assets to lots of people reliably with a full set of features</li>
+							<li>• Built in Zend Framework 1 using PHP5-FPM 5.5, MySQL, HTML5, JS, AJAX, ZMQ, Vagrant, Nginx, Ubuntu</li>
 						</ul>
 					</div>
 						<header>
@@ -679,13 +716,13 @@ h2.section-title {
 							<p>Touring Musician</p>
 						</div>
 						<ul class="highlights">
-							<li>Implemented, managed, maintained Website/Marketing/Content Strategy</li>
-							<li>Helped grow our email list from 0-60,000 with various marketing strategies</li>
-							<li>Launched, built and maintained the system and server to facilitate giving away 226K albums in a the span of a month (March, 2013)</li>
-							<li>Built automated incentive system for users to tweet/like/send an email in exchange for a download</li>
-							<li>Built logistical tool for tour management and ticket sales</li>
-							<li>Built complete ticketing system, and date/show manager on top of Google Calendar and Stripe</li>
-							<li>Built internal CRM tools to improve customer experience</li>
+							<li>• Implemented, managed, maintained Website/Marketing/Content Strategy</li>
+							<li>• Helped grow our email list from 0-60,000 with various marketing strategies</li>
+							<li>• Launched, built and maintained the system and server to facilitate giving away 226K albums in a the span of a month (March, 2013)</li>
+							<li>• Built automated incentive system for users to tweet/like/send an email in exchange for a download</li>
+							<li>• Built logistical tool for tour management and ticket sales</li>
+							<li>• Built complete ticketing system, and date/show manager on top of Google Calendar and Stripe</li>
+							<li>• Built internal CRM tools to improve customer experience</li>
 						</ul>
 					</div>
 					</section>
@@ -709,7 +746,7 @@ h2.section-title {
 								<li>PHPSpec</li>
 								<li>Behat/Gherkin</li>
 								<li>ZF 1, 2, 3</li>
-								<li>Expressive 1, 2</li>
+								<li>Expressive 1, 2, 3</li>
 								<li>Swift</li>
 								<li>Javascript</li>
 								<li>React</li>
@@ -751,6 +788,7 @@ h2.section-title {
 								<li>Google Calendar</li>
 								<li>RabbitMQ</li>
 								<li>Mandrill</li>
+								<li>Jenkins</li>
 							</ul>
 						</div>
 					</section>
