Add 99 Bottles of OOP

--- a/resume.html
+++ b/resume.html
@@ -732,6 +732,25 @@ h2.section-title {
 
 
 
+				<section class="section">
+					<h2 class='section-title'>Publications</h2>
+					<section id="publications">
+							<div class="item">
+								<span class="name">
+										99 Bottles of OOP (PHP Version)
+								</span>
+									<span class="publisher">
+										<div class="website"><a href="https://www.sandimetz.com/99bottles">https://www.sandimetz.com/99bottles</a></div>
+									</span>
+									<span class="date">
+										Coming in 2019
+									</span>
+								<div class="summary">
+									<p>99 Bottles of OOP is a practical guide to writing cost-effective, maintainable, and pleasing object-oriented code.</p>
+								</div>
+							</div>
+					</section>
+				</section>
 
 				<section class="section">
 					<h2 class='section-title'>Skills</h2>
