Add github profile

--- a/resume.html
+++ b/resume.html
@@ -551,6 +551,16 @@ h2.section-title {
 					</div>
 
 
+					<div id="profiles">
+						<div class="item">
+							<span class="network fa fa-github github"></span>
+							<span class="username">
+								<span class="url">
+									<a href="https://github.com/stringerbell">stringerbell</a>
+								</span>
+							</span>
+						</div>
+					</div>
 				</section>
 
 				<section class="section main-summary">
