Add lead detail

--- a/resume.html
+++ b/resume.html
@@ -617,6 +617,7 @@ h2.section-title {
 									six months to &#x27;Software Engineer&#x27;. Received another promotion to
 									&#x27;Senior Software Engineer&#x27;.
 								</li>
+								<li>• Led three engineers for ballottrax</li>
 								<li>• Led the project to build a native iOS app
 									<div class="website"><a
 											href="https://itunes.apple.com/us/app/ballottrax/id1214500178?mt=8">https://itunes.apple.com/us/app/ballottrax/id1214500178?mt=8
