--- a/resume/index.html
+++ b/resume/index.html
@@ -605,7 +605,7 @@ document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.27.5
                 <ul class="highlights">
                     <li>• Supported the platform during high growth. ~10x growth in ~2 years.</li>
                     <li>• Migrated lots of legacy PHP software to Golang microservices while shipping new features to help increase stability without downtime</li>
-                    <li>• Technical Lead for a team of five engineers</li>
+                    <li>• Served as a Technical Lead for a team of five engineers</li>
                     <li>• Reduced complexity, increased reliability, and visibility for customer signup process by using Step Functions/FSM</li>
                     <li>• Led the projects for shipping Stripe KYC/AML requirements, Donor Covered Fees, Anti-fraud tools, Guest Giving, Offline Donations, Check Scanning, Donor Merge, Non-Charitable Payments, Audit Logging</li>
                     <li>• Helped build customer onboarding process to increase revenue, and reduce customer churn.</li>
@@ -645,7 +645,7 @@ document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.27.5
                     <li>• Mentored junior developers on best practices, helping them write valuable tests, simplify logic, and decrease conditionals</li>
                     <li>• Led the project to automate tedious developer workflows, implement various business processes, and connect various services together using Slack as a CLI. (Like an internal IFTTT)</li>
                     <li>• Developed custom 30+ Slack slash commands: /auto_merge, /whynotmerge, /rebase, /mailgun, /twilio, /chipotle, /jenkins, /jira, /scrum</li>
-                    <li>• Rebase button workflow</li>
+                    <li>• Built a rebase button workflow</li>
                     <li>• Built in Zend Framework 2-3, Apigility, Zend Expressive 1-3 using PHP 7+, Postgres, React, RabbitMQ, Vagrant, Apache, Centos</li>
                 </ul>
             </div>
@@ -731,7 +731,7 @@ document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.27.5
                 <ul class="highlights">
                     <li>• Implemented, managed, maintained Website/Marketing/Content Strategy</li>
                     <li>• Helped grow our email list from 0-60,000 with various marketing strategies</li>
-                    <li>• Launched, built and maintained the system and server to facilitate giving away 226K albums in a the span of a month (March, 2013)</li>
+                    <li>• Launched, built and maintained the system and server to facilitate giving away 226K albums in the span of a month (March, 2013)</li>
                     <li>• Built automated incentive system for users to tweet/like/send an email in exchange for a download</li>
                     <li>• Built logistical tool for tour management and ticket sales</li>
                     <li>• Built complete ticketing system, and date/show manager on top of Google Calendar and Stripe</li>
