Add link to bread

--- a/about/index.html
+++ b/about/index.html
@@ -163,7 +163,7 @@
 <li>Reading good books</li>
 <li>Eating good food, drinking good alcohol</li>
 <li>Roasting coffee</li>
-<li>Baking Bread</li>
+<li><a href="/bread">Baking Bread</a></li>
 </ul></li>
 </ul>
 
