--- a/resume/index.html
+++ b/resume/index.html
@@ -570,10 +570,8 @@ document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.27.5
     <section class="section main-summary">
         <h2 class='section-title'>About</h2>
         <section>
-            <p>8 years of experience building full-stack, real-world, product focused, web and mobile applications and tools to help increase revenue and decrease expenses.</p>
+            <p>10 years of experience building full-stack, real-world, product focused, web and mobile applications and tools to help increase revenue and decrease expenses.</p>
         </section>
-    </section>
-
     </section>
 
     <section class="section">
@@ -594,24 +592,24 @@ document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.27.5
             </header>
             <div class="item">
                 <div class="position">
-                    Software Development Engineer III (Technical Lead)
+                  Staff Software Engineer (Technical Lead)
                 </div>
                 <div class="website">
                     <a href="https://subsplash.com">https://subsplash.com</a>
                 </div>
                 <div class="summary">
-                    <p>Non-profit giving platform</p>
+                    <p>Payments team</p>
                 </div>
                 <ul class="highlights">
                     <li>• Supported the platform during high growth. ~10x growth in ~2 years.</li>
+                    <li>• Led the projects for shipping Stripe KYC</li>
                     <li>• Migrated lots of legacy PHP software to Golang microservices while shipping new features to help increase stability without downtime</li>
-                    <li>• Served as a Technical Lead for a team of five engineers</li>
-                    <li>• Reduced complexity, increased reliability, and visibility for customer signup process by using Step Functions/FSM</li>
-                    <li>• Led the projects for shipping Stripe KYC/AML requirements, Donor Covered Fees, Anti-fraud tools, Guest Giving, Offline Donations, Check Scanning, Donor Merge, Non-Charitable Payments, Audit Logging</li>
+                    <li>• Served as a Technical Lead for a team of 3-6 engineers</li>
+                    <li>• Reduced complexity, increased reliability, and visibility for customer signup process by using Step Functions</li>
                     <li>• Helped build customer onboarding process to increase revenue, and reduce customer churn.</li>
-                    <li>• Mentored junior developers on best practices, helping them write valuable tests, simplify logic, and decrease conditionals</li>
                     <li>• Upgraded legacy PHP 5.6 applications to PHP 7+</li>
                     <li>• Used golang to help increase system reliability and code maintainability</li>
+                    <li>• Helped increase stability on legacy customer-facing integration application</li>
                 </ul>
             </div>
             <header>
@@ -773,30 +771,31 @@ document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.27.5
                     Web Development
                 </div>
                 <ul class="keywords">
-                    <li>Golang</li>
-                    <li>PHP</li>
-                    <li>PHPUnit</li>
-                    <li>PHPSpec</li>
-                    <li>Docker</li>
-                    <li>Behat/Gherkin</li>
-                    <li>ZF 1, 2, 3</li>
-                    <li>Expressive 1, 2, 3</li>
-                    <li>Swift</li>
-                    <li>Javascript</li>
-                    <li>React</li>
-                    <li>Redux</li>
-                    <li>Statecharts</li>
-                    <li>Jest</li>
-                    <li>Ruby</li>
-                    <li>RSpec</li>
-                    <li>Watir</li>
-                    <li>CSS</li>
-                    <li>Jekyll</li>
-                    <li>Gulp</li>
-                    <li>Git</li>
-                    <li>Mercurial</li>
-                    <li>Composer</li>
-                    <li>RabbitMQ</li>
+                  <li>git</li>
+                  <li>Golang</li>
+                  <li>Docker</li>
+                  <li>Kubernetes</li>
+                  <li>Javascript</li>
+                  <li>React</li>
+                  <li>PHP</li>
+                  <li>Composer</li>
+                  <li>PHPUnit</li>
+                  <li>PHPSpec</li>
+                  <li>Behat/Gherkin</li>
+                  <li>ZF 1, 2, 3</li>
+                  <li>Expressive 1, 2, 3</li>
+                  <li>Swift</li>
+                  <li>Redux</li>
+                  <li>Statecharts</li>
+                  <li>Jest</li>
+                  <li>Ruby</li>
+                  <li>RSpec</li>
+                  <li>Watir</li>
+                  <li>CSS</li>
+                  <li>Jekyll</li>
+                  <li>Gulp</li>
+                  <li>Mercurial</li>
+                  <li>RabbitM</li>
                 </ul>
             </div>
             <div class="item">
@@ -804,11 +803,11 @@ document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.27.5
                     APIs
                 </div>
                 <ul class="keywords">
+                    <li>Stripe</li>
+                    <li>Amazon Web Services</li>
                     <li>Slack</li>
                     <li>Twilio</li>
                     <li>Mailgun</li>
-                    <li>Amazon Web Services</li>
-                    <li>Stripe</li>
                     <li>Twitter</li>
                     <li>Facebook</li>
                     <li>Bitbucket</li>
@@ -819,14 +818,11 @@ document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.27.5
                     <li>Google Calendar</li>
                     <li>RabbitMQ</li>
                     <li>Mandrill</li>
-                    <li>Jenkins</li>
+                    <li>Jenkin</li>
                 </ul>
             </div>
         </section>
     </section>
-
-
-
 </div>
 </body>
 
