Update resume JSON

--- a/resume/index.html
+++ b/resume/index.html
@@ -241,7 +241,7 @@
 <section id="about">
     <h3>About</h3>
     <article>
-        <p>Results-driven software engineer with 10 years of experience. Proven track record of designing and implementing scalable solutions in the payments space. Seeking opportunities to leverage technical expertise and leadership skills to drive innovation and deliver impactful solutions in a dynamic team environment.</p>
+        <p>Technical leader with deep expertise in building and scaling payment systems, currently processing $2B+ annually. Proven track record of transforming legacy architectures into modern microservices while leading high-performing engineering teams. Known for reducing system complexity through elegant solutions and cultivating strong engineering cultures through mentorship. Brings unique perspective from founding successful digital ventures and navigating explosive growth phases.</p>
     </article>
 </section>
 <section id="profiles">
