--- a/bread/index.html
+++ b/bread/index.html
@@ -130,9 +130,56 @@
 <div class='entry'>
   <div class='container entry-content'>
 
-    <ul>
-      <li>TODO: Add some bread pics</li>
-    </ul>
+
+    <div class="bread-gallery">
+      <div class="bread-card">
+        <img src="/images/cwasahnn.jpg" alt="Croissants!" class="bread-image">
+        <div class="bread-info">
+          <h3 class="bread-title"></h3>
+          <p class="bread-description">Croissants!</p>
+        </div>
+      </div>
+
+      <div class="bread-card">
+        <img src="/images/bagels.jpg" alt="Bagels!" class="bread-image">
+        <div class="bread-info">
+          <h3 class="bread-title"></h3>
+          <p class="bread-description">Bagels!</p>
+        </div>
+      </div>
+
+      <div class="bread-card">
+        <img src="/images/baguettes.jpg" alt="Baguettes!" class="bread-image">
+        <div class="bread-info">
+          <h3 class="bread-title"></h3>
+          <p class="bread-description">Baguettes!</p>
+        </div>
+      </div>
+
+      <div class="bread-card">
+        <img src="/images/ciabatta.jpg" alt="Ciabatta" class="bread-image">
+        <div class="bread-info">
+          <h3 class="bread-title"></h3>
+          <p class="bread-description">Ciabatta!</p>
+        </div>
+      </div>
+
+      <div class="bread-card">
+        <img src="/images/cinnarolls.jpg" alt="Cinnarolls!" class="bread-image">
+        <div class="bread-info">
+          <h3 class="bread-title"></h3>
+          <p class="bread-description">Cinnarolls!</p>
+        </div>
+      </div>
+
+      <div class="bread-card">
+        <img src="/images/sourdough.jpg" alt="Sourdough Boule!" class="bread-image">
+        <div class="bread-info">
+          <h3 class="bread-title"></h3>
+          <p class="bread-description">Sourdough Boule!</p>
+        </div>
+      </div>
+    </div>
   </div>
 
 </div>
@@ -186,3 +233,106 @@
 
 </html>
 
+<style>
+  .bread-gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 3rem;
+    padding: 3rem 0;
+    font-family: 'Work Sans', -apple-system, system-ui, sans-serif;
+  }
+
+  .bread-card {
+    position: relative;
+    background: #111;
+    overflow: hidden;
+    transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+    min-height: 400px;
+  }
+
+  .bread-card::after {
+    content: 'Yes, it's bread';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 4rem 1.5rem 1.5rem;
+    background: linear-gradient(0deg, rgba(0,0,0,0.9) 0%, rgba(0,0,0,0) 100%);
+    color: #fff;
+    font-size: 0.8rem;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+
+  .bread-card:hover {
+    transform: translateY(-8px);
+  }
+
+  .bread-card:hover::after {
+    opacity: 1;
+  }
+
+  .bread-image {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+    filter: grayscale(30%);
+    transition: filter 0.3s ease;
+  }
+
+  .bread-card:hover .bread-image {
+    filter: grayscale(0%);
+  }
+
+  .bread-info {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0; /* Added to ensure full width */
+    padding: 2rem 1.5rem;
+    background: rgba(17, 17, 17, 0.95);
+    border-top: 1px solid #333;
+    transform: translateY(101%);
+    transition: transform 0.3s ease;
+  }
+
+  .bread-card:hover .bread-info {
+    transform: translateY(0);
+  }
+
+  .bread-title {
+    font-size: 1.75rem;
+    font-weight: 600;
+    letter-spacing: -0.02em;
+    margin: 0 0 0.75rem 0;
+    color: #ffcd00;
+    width: 100%; /* Ensure title takes full width */
+    box-sizing: border-box; /* Include padding in width calculation */
+  }
+
+  .bread-description {
+    font-size: 0.95rem;
+    line-height: 1.6;
+    color: #fff;
+    margin: 0;
+    opacity: 0.8;
+    width: 100%; /* Ensure description takes full width */
+    box-sizing: border-box; /* Include padding in width calculation */
+    word-wrap: break-word; /* Ensure long words break */
+  }
+
+  .bread-tag {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    background: #ffcd00;
+    padding: 0.5rem 1rem;
+    font-size: 0.75rem;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    color: #111;
+    z-index: 1;
+  }
+</style>
